@@ -1,8 +1,9 @@
 0.70.0
 ------
 1. Added option to colour selected check/radios.
-2. Add option to specify appearance of dock-widget titlebars.
-3. Made XBar support a config, and not cmake, option.
+2. Added option to use a smaller dot for radios.
+3. Add option to specify appearance of dock-widget titlebars.
+4. Made XBar support a config, and not cmake, option.
 
 0.69.2
 ------
